--- a/Maui.NullableDateTimePicker.Samples/MainPage.xaml
+++ b/Maui.NullableDateTimePicker.Samples/MainPage.xaml
@@ -47,7 +47,7 @@
                 <ImageButton Source="{Binding CalendarIcon}" Clicked="DateTimePicker_Clicked" WidthRequest="30" HeightRequest="30" />
             </HorizontalStackLayout>
 
-            <Label Text="{Binding MyDateTime, StringFormat='The date is: {0:dd.MM.yyyy HH:mm}'}" />
+            <Label Text="{Binding MyDateTime, StringFormat='The date is: {0:d} {0:t}'}" />
             <!-- Nullable datetime picker -->
 
 
