--- a/Maui.NullableDateTimePicker.Samples/MainPage.xaml
+++ b/Maui.NullableDateTimePicker.Samples/MainPage.xaml
@@ -40,6 +40,7 @@
                                         OkButtonText="Done" 
                                         HorizontalOptions="Fill"
                                         Icon="{Binding CalendarIcon}"
+                                        IconBackgroundColor="Transparent"
                                         WidthRequest="200"
                                         HeightRequest="40" />
 
