--- a/Maui.NullableDateTimePicker/Popup/NullableDateTimePickerContent.xaml
+++ b/Maui.NullableDateTimePicker/Popup/NullableDateTimePickerContent.xaml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Maui.NullableDateTimePicker.NullableDateTimePickerContent">
+             x:Class="Maui.NullableDateTimePicker.NullableDateTimePickerContent"
+             Padding="0" Margin="0">
     <ScrollView 
         Margin = "0"
         Padding = "0"
