--- a/Maui.NullableDateTimePicker.Samples/MainPage.xaml
+++ b/Maui.NullableDateTimePicker.Samples/MainPage.xaml
@@ -23,7 +23,15 @@
                                         IconBackgroundColor="Transparent" />
 
             <Label Text="DateTimepicker" />
-            <ndp:NullableDateTimePicker NullableDateTime="{Binding MyDateTime}" 
+            <Frame BorderColor="{AppThemeBinding Light='#303030', Dark='#5b5b5b'}" 
+               HorizontalOptions="Start" 
+               CornerRadius="10"
+               Padding="2.5" 
+               HeightRequest="35" 
+               MaximumWidthRequest="200"
+               VerticalOptions="Center"
+               BackgroundColor="{AppThemeBinding Light=White, Dark='#303030'}">
+                <ndp:NullableDateTimePicker NullableDateTime="{Binding MyDateTime}" 
                                         Mode="DateTime"
                                         WidthRequest="300" 
                                         ShowWeekNumbers="True"
@@ -31,6 +39,7 @@
                                         SelectedDayStyle="{StaticResource SelectedDayStyle}"
                                         IconBackgroundColor="Transparent"
                                         />
+            </Frame>
 
             <Label Text="Timepicker" />
             <ndp:NullableDateTimePicker NullableDateTime="{Binding MyDateTime}" 
@@ -40,28 +49,42 @@
                                         ActivityIndicatorColor="{StaticResource Yellow200Accent}"
                                         IconBackgroundColor="Transparent"/>
 
-            
+
 
             <Label Text="Calling nullabledatetimepicker calendar popup directly with own entry and button" />
-            <HorizontalStackLayout HorizontalOptions="Fill" HeightRequest="40">
-                <Entry x:Name="DateTimeEntry" 
+            <Frame BorderColor="{AppThemeBinding Light='#303030', Dark='#5b5b5b'}" 
+                   HorizontalOptions="Start" 
+                   CornerRadius="10"
+                   Padding="2.5" 
+                   HeightRequest="35" 
+                   MaximumWidthRequest="200"
+                   BackgroundColor="{AppThemeBinding Light=White, Dark='#303030'}">
+                <Grid HorizontalOptions="Fill" VerticalOptions="Fill" Margin="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <ndp:NullableDateTimePickerEntry x:Name="DateTimeEntry" 
                         Text="{Binding MyDateTime, StringFormat='{0:g}'}" 
                         HorizontalOptions="Fill" 
-                        VerticalOptions="Fill" 
-                        IsReadOnly="True">
-                    <Entry.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="DateTimePicker_Clicked" />
-                    </Entry.GestureRecognizers>
-                </Entry>
-                <ImageButton Source="{Binding CalendarIcon}" 
+                        VerticalOptions="Center" 
+                        IsReadOnly="True"
+                        TextColor="{AppThemeBinding Light=Black, Dark=White}">
+                        <Entry.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="DateTimePicker_Clicked" />
+                        </Entry.GestureRecognizers>
+                    </ndp:NullableDateTimePickerEntry>
+                    <ImageButton Grid.Column="1" Source="{Binding CalendarIcon}" 
                     Clicked="DateTimePicker_Clicked" 
                     HorizontalOptions="Fill"
+                                 Aspect="AspectFit"
                     VerticalOptions="Fill"
+                                 HeightRequest="25"
                     Margin="0"
-                    Padding="2"
-                    HeightRequest="35"
+                    Padding="0"    
                     BackgroundColor="Transparent" />
-            </HorizontalStackLayout>
+                </Grid>
+            </Frame>
 
             <Label Text="Datepicker programmatically" />
             <StackLayout x:Name="DateTimePlaceStackLayout" HorizontalOptions="Start"></StackLayout>
