--- a/Maui.NullableDateTimePicker.Samples/MainPage.xaml
+++ b/Maui.NullableDateTimePicker.Samples/MainPage.xaml
@@ -51,40 +51,33 @@
 
 
             <Label Text="Calling nullabledatetimepicker calendar popup directly with own entry and button" TextColor="Black" />
-            <Border Stroke="{AppThemeBinding Light='#303030', Dark='#5b5b5b'}" 
-                   HorizontalOptions="Start" 
-                   StrokeThickness="1"
-                   StrokeShape="RoundRectangle 10"
-                   Padding="5" 
-                   HeightRequest="35" 
-                   MaximumWidthRequest="200"
-                   BackgroundColor="{AppThemeBinding Light=White, Dark='#303030'}">
-                <Grid HorizontalOptions="Fill" VerticalOptions="Center" Margin="0" Padding="0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
-                    <ndp:NullableDateTimePickerEntry x:Name="DateTimeEntry" 
+
+            <Grid HorizontalOptions="Fill" VerticalOptions="Center" Margin="0" Padding="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <Entry x:Name="DateTimeEntry" 
                         Text="{Binding MyDateTime, StringFormat='{0:g}'}" 
                         Margin="0"
                         HorizontalOptions="Fill" 
                         VerticalOptions="Center" 
                         IsReadOnly="True"
+                       BackgroundColor="{AppThemeBinding Light=White, Dark='#303030'}"
                         TextColor="{AppThemeBinding Light=Black, Dark=White}">
-                        <Entry.GestureRecognizers>
-                            <TapGestureRecognizer Tapped="DateTimePicker_Clicked" />
-                        </Entry.GestureRecognizers>
-                    </ndp:NullableDateTimePickerEntry>
+                    <Entry.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="DateTimePicker_Clicked" />
+                    </Entry.GestureRecognizers>
+                </Entry>
 
-                    <ImageButton Grid.Column="1" Source="{Binding CalendarIconAppTheme}" 
+                <ImageButton Grid.Column="1" Source="{Binding CalendarIconAppTheme}" 
                     Clicked="DateTimePicker_Clicked" 
                     BackgroundColor="{AppThemeBinding Light=White, Dark='#303030'}"
                      Aspect="AspectFit"            
                     Margin="0"
                                  WidthRequest="30"
                     Padding="0,2" />
-                </Grid>
-            </Border>
+            </Grid>
 
             <Label Text="Datepicker programmatically" TextColor="Black" />
             <StackLayout x:Name="DateTimePlaceStackLayout" HorizontalOptions="Start"></StackLayout>
