--- a/Maui.NullableDateTimePicker.Samples/MainPage.xaml
+++ b/Maui.NullableDateTimePicker.Samples/MainPage.xaml
@@ -21,11 +21,11 @@
                                         HorizontalOptions="Start"
                                         Icon="{Binding CalendarIcon}"
                                         WidthRequest="200" 
-                                        HeightRequest="40"
-                                            BorderColor="Black"
-                                            BorderWidth="1"
-                                            CornerRadius="10" 
-                                            Padding="5,0"
+                                        HeightRequest="30"
+                                        BorderColor="Black"
+                                        BorderWidth="1"
+                                        CornerRadius="10"
+                                        Padding="5,2.5"
                                             />
       
 
@@ -78,9 +78,8 @@
                     Clicked="DateTimePicker_Clicked" 
                     BackgroundColor="Transparent"
                      Aspect="AspectFit"            
-                    Margin="0"
-                                 WidthRequest="30"
-                    Padding="0,2" />
+                    Margin="5"
+                    WidthRequest="30" />
             </Grid>
 
             <Label Text="Datepicker programmatically" TextColor="Black" />
@@ -96,14 +95,15 @@
                             Icon="{Binding CalendarIcon}"
                             WidthRequest="200" 
                             HeightRequest="40"
-                            Padding="10,0"/>
+                            Padding="5,0"/>
 
             <Label Text="Disabled" TextColor="Black" />
             <ndp:NullableDateTimePicker NullableDateTime="{Binding MyDateTime}" 
                             Mode="DateTime"
                             HorizontalOptions="Start"
                             IsEnabled="False"
-                                        BackgroundColor="{StaticResource Gray400}"
+                            BackgroundColor="{StaticResource Gray300}"
+                            CornerRadius="5"
                             />
 
             <Label Text="{Binding MyDateTime, StringFormat='The date is: {0:g}'}" TextColor="Black" />
