--- a/Maui.NullableDateTimePicker.Samples/MainPage.xaml
+++ b/Maui.NullableDateTimePicker.Samples/MainPage.xaml
@@ -13,7 +13,18 @@
             <!-- Nullable datetime picker -->
             <Label Text="Maui Nullable and Clearable DateTimePicker Examples" FontSize="16" FontAttributes="Bold" VerticalOptions="Center" TextColor="Black" />
 
-            <Label Text="Datepicker" TextColor="Black" />
+            <Label Text="DateTimepicker" TextColor="Black" />
+
+            <ndp:NullableDateTimePicker NullableDateTime="{Binding MyDateTime}" 
+                            Mode="DateTime"
+                            WidthRequest="300" 
+                            ShowWeekNumbers="True"
+                            HorizontalOptions="Start"
+                            CornerRadius="10"
+                            SelectedDayStyle="{StaticResource SelectedDayStyle}"
+                            />
+
+            <Label Text="Datepicker with border" TextColor="Black" />
 
             <ndp:NullableDateTimePicker NullableDateTime="{Binding MyDateTime}"  
                                         Mode="Date"
@@ -28,16 +39,7 @@
                                             />
 
 
-            <Label Text="DateTimepicker" TextColor="Black" />
-
-            <ndp:NullableDateTimePicker NullableDateTime="{Binding MyDateTime}" 
-                                        Mode="DateTime"
-                                        WidthRequest="300" 
-                                        ShowWeekNumbers="True"
-                                        HorizontalOptions="Start"
-                                        CornerRadius="10"
-                                        SelectedDayStyle="{StaticResource SelectedDayStyle}"
-                                        />
+            
 
             <Label Text="Timepicker" TextColor="Black" />
             <ndp:NullableDateTimePicker NullableDateTime="{Binding MyDateTime}" 
